--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
       Farooqui, Saylani Welfare International Trust was built on the fundamentals of breaking the cycle of poverty,
       alleviating the financial troubles of the poor, giving people a chance to live a dignified life and spreading
       happiness.</p>
-    <p class="p2 silver">We are an organization that believes in lighting up the lives of underprivileged people across the
+    <p class="p2 silver">We are an organization that believes in lighting up the lives of underprivileged people across
+      the
       world. We endeavor to provide the best quality services in areas including food, education, medical and social
       welfare free of cost to people living in the dark. With over 60 different sectors, we feed thousands of hungry
       people each day, hundreds more are given the hope of life through medical health care, many are educated to
@@ -192,7 +193,8 @@
       under the guidance of a team of over 2,000 working professionals who help almost 125,000 people on a daily
       basis.
     </p>
-    <p class="p2 silver">We strongly believe that a little help goes a long way and our work would not be possible without
+    <p class="p2 silver">We strongly believe that a little help goes a long way and our work would not be possible
+      without
       the
       generous support of our valuable donors. Our local and international donors have graciously lent us a hand by
       supporting our causes and enabling us to serve the needs of people in need.</p>
@@ -224,42 +226,42 @@
     <div class="container">
       <h1><span class="bl">What We </span><span class="green">Are Doing</span></h1>
       <p class="greenp p">______<img class="favicon" src="Images/favicon.png" alt="saylani logo">______</p>
-    <div class="doing">
-      <div class="box">
-        <img class="dlogo" src="Images/sadqah.png">
-        <h6 class="ddisc bl">
-          ONLINE SADQAH
-        </h6>
-      </div>
-      <div class="box">
-        <img class="dlogo" src="Images/welfare.png">
-        <h6 class="ddisc bl">
-          WELFARE
-        </h6>
-      </div>
-      <div class="box">
-        <img class="dlogo" src="Images/medical.png">
-        <h6 class="ddisc bl">
-          MEDICAL
-        </h6>
-      </div>
-      <div class="box">
-        <img class="dlogo" src="Images/Dastarkhwan.png">
-        <h6 class="ddisc bl">
-          DASTARKHWAN
-        </h6>
-      </div>
-      <div class="box">
-        <img class="dlogo" src="Images/ROPLANT.png">
-        <h6 class="ddisc bl">
-          RO PLANT
-        </h6>
-      </div>
-      <div class="box">
-        <img class="dlogo" src="Images/education2.png">
-        <h6 class="ddisc bl">
-          EDUCATION
-        </h6>
+      <div class="doing">
+        <div class="box">
+          <img class="dlogo" src="Images/sadqah.png">
+          <h6 class="ddisc bl">
+            ONLINE SADQAH
+          </h6>
+        </div>
+        <div class="box">
+          <img class="dlogo" src="Images/welfare.png">
+          <h6 class="ddisc bl">
+            WELFARE
+          </h6>
+        </div>
+        <div class="box">
+          <img class="dlogo" src="Images/medical.png">
+          <h6 class="ddisc bl">
+            MEDICAL
+          </h6>
+        </div>
+        <div class="box">
+          <img class="dlogo" src="Images/Dastarkhwan.png">
+          <h6 class="ddisc bl">
+            DASTARKHWAN
+          </h6>
+        </div>
+        <div class="box">
+          <img class="dlogo" src="Images/ROPLANT.png">
+          <h6 class="ddisc bl">
+            RO PLANT
+          </h6>
+        </div>
+        <div class="box">
+          <img class="dlogo" src="Images/education2.png">
+          <h6 class="ddisc bl">
+            EDUCATION
+          </h6>
         </div>
       </div>
     </div>
@@ -286,7 +288,7 @@
         <div class="mission1 grey">
           <img src="Images/tharparkar.png">
           <h5 class="bl">THARPARKAR
-            </h5>
+          </h5>
         </div>
       </div>
     </div>
@@ -295,9 +297,11 @@
         Upcoming Events
       </h4>
       <marquee class="upcoming" direction="up" scrollamount="4">
-        <p class="p3 silver">Saylani Welfare Distributing Ration & Clothes to affected people of Balochistan .More Details</p>
+        <p class="p3 silver">Saylani Welfare Distributing Ration & Clothes to affected people of Balochistan .More
+          Details</p>
 
-        <p class="p3 silver">Entry Test Accouncement (Graphic Designing & Video Editing/Animation Course) On Sunday 3rd March
+        <p class="p3 silver">Entry Test Accouncement (Graphic Designing & Video Editing/Animation Course) On Sunday 3rd
+          March
           2019 @ 11:00Am
           Vanue: 4rh Floor, Saylani Welfare International Trust HeadOffice Bahadurabad .More Details</p>
 
@@ -307,7 +311,8 @@
 
         <p class="p3 silver">PIAIC Entrance Exam Merit Ranking List Announced.More Details</p>
 
-        <p class="p3 silver"> President of Pakistan (Dr. Arif Alvi) Visited Saylani Welfare International Trust HeadOffice
+        <p class="p3 silver"> President of Pakistan (Dr. Arif Alvi) Visited Saylani Welfare International Trust
+          HeadOffice
           Karachi. More
           Details</p>
       </marquee>
@@ -316,13 +321,13 @@
   <div class="container">
     <h1><span class="bl">IMAGE </span><span class="green">GALLERY</span></h1>
     <p class="greenp p">______<img class="favicon" src="Images/favicon.png" alt="saylani logo">______</p>
-  <div class="gallery container-xl ">
-    <img class="image" src="Images/rashan2.jpg">
-    <img class="image" src="Images/food.jpg">
-    <img class="image" src="Images/hazrat.jpg">
-    <img class="image" src="Images/rashan2.jpg">
-    <img class="image" src="Images/hazrat2.jpg">
-  </div>
+    <div class="gallery container-xl ">
+      <img class="image" src="Images/rashan2.jpg">
+      <img class="image" src="Images/food.jpg">
+      <img class="image" src="Images/hazrat.jpg">
+      <img class="image" src="Images/rashan2.jpg">
+      <img class="image" src="Images/hazrat2.jpg">
+    </div>
   </div>
   <div class="black">
     <div class="footer container">
@@ -332,14 +337,18 @@
           <p>
             Head Office,<br>
             A-25, Bahadurabad Chowrangi Karachi, Pakistan</p>
-          <p><img class="logo2" src="Images/download.png">UAN: 111-729-526<span class="space"></span>
-            <img class="logo2" src="Images/download (9).png">(+0092-213) 4130786-90</p>
-          <p><img class="logo2" src="Images/download.png">CELL: 92-311-1729526<span class="space"></span>
-            <img class="logo2" src="Images/download.png">USA NO +1(716)941 7792</p>
-          <p>
-            <img class="logo2" src="Images/download.png">UK NO (+44)115 970 6256<span class="space"></span>
-            <img class="logo2" src="Images/download (5).png">info@saylaniwelfare.com
-          </p>
+          <div class="numbers">
+            <p><img class="logo2" src="Images/download.png">UAN: 111-729-526<spn class="space"></span></p>
+            <p><img class="logo2" src="Images/download (9).png">(+0092-213) 4130786-90</p>
+            </div>
+          <div class="numbers">
+            <p><img class="logo2" src="Images/download.png">CELL: 92-311-1729526<san class="space"></span></p>
+            <p><img class="logo2" src="Images/download.png">USA NO +1(716)941 7792</p>
+            </div>
+          <div class="numbers">
+            <p><img class="logo2" src="Images/download.png">UK NO (+44)115 970 6256<san class="space"></span></p>
+            <p><img class="logo2" src="Images/download (5).png">info@saylaniwelfare.com</p>
+            </div>
         </div>
       </div>
       <div class="links">
@@ -356,9 +365,9 @@
       </div>
     </div>
   </div>
-  <div class="lfooter blue"> 
+  <div class="lfooter blue">
     <div class=" white">
-    Copyright © 2019 Saylani Welfare
+      Copyright © 2019 Saylani Welfare
     </div>
   </div>
 
