--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <div class="break"></div>
   <div class="bl-header blue">
     <div class="socdiv">
-      <a href="#"><img class="social" src="Images/download (7).png" alt=""></a>
-      <a href="#"><img class="social" src="Images/download (2).png" alt=""></a>
-      <a href="#"><img class="social" src="Images/download (6).png" alt=""></a>
-      <a href="#"><img class="social" src="Images/download (3).png" alt=""></a>
+      <a href="#"><img class="social" src="Images/download (7).png" alt="logo"></a>
+      <a href="#"><img class="social" src="Images/download (2).png" alt="logo"></a>
+      <a href="#"><img class="social" src="Images/download (6).png" alt="logo"></a>
+      <a href="#"><img class="social" src="Images/download (3).png" alt="logo"></a>
     </div>
     <p class="white" id="p1">Millions of people's life has changed, millions more awaiting your donation</p>
     <div class="buttons">
@@ -119,31 +119,31 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="Images/1.PNG" class="d-block w-100" alt="...">
+        <img src="Images/1.PNG" class="d-block w-100" alt="saylani images">
       </div>
       <div class="carousel-item">
-        <img src="Images/2.PNG" class="d-block w-100" alt="...">
+        <img src="Images/2.PNG" class="d-block w-100" alt="saylani images">
       </div>
       <div class="carousel-item">
-        <img src="Images/3.PNG" class="d-block w-100" alt="...">
+        <img src="Images/3.PNG" class="d-block w-100" alt="saylani images">
       </div>
       <div class="carousel-item">
-        <img src="Images/4.PNG" class="d-block w-100" alt="...">
+        <img src="Images/4.PNG" class="d-block w-100" alt="saylani images">
       </div>
       <div class="carousel-item">
-        <img src="Images/5.PNG" class="d-block w-100" alt="...">
+        <img src="Images/5.PNG" class="d-block w-100" alt="saylani images">
       </div>
       <div class="carousel-item">
-        <img src="Images/6.PNG" class="d-block w-100" alt="...">
+        <img src="Images/6.PNG" class="d-block w-100" alt="saylani images">
       </div>
       <div class="carousel-item">
-        <img src="Images/7.PNG" class="d-block w-100" alt="...">
+        <img src="Images/7.PNG" class="d-block w-100" alt="saylani images">
       </div>
       <div class="carousel-item">
-        <img src="Images/8.PNG" class="d-block w-100" alt="...">
+        <img src="Images/8.PNG" class="d-block w-100" alt="saylani images">
       </div>
       <div class="carousel-item">
-        <img src="Images/9.PNG" class="d-block w-100" alt="...">
+        <img src="Images/9.PNG" class="d-block w-100" alt="saylani images">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -202,22 +202,22 @@
   </div>
   <div class="monthly blue">
     <Span>
-      <img class="mlogo" src="Images/food.png"><br>
+      <img class="mlogo" src="Images/food.png" alt="food"><br>
       <h1 class="mfig white">125,000</h1>
       <h6 class="white mdisc">DAILY DASTRAKHAN<span class="green">(MONTHLY)</span></h6>
     </Span>
     <Span>
-      <img class="mlogo" src="Images/family.png"><br>
+      <img class="mlogo" src="Images/family.png" alt="family"><br>
       <h1 class="mfig white">7,500</h1>
       <h6 class="white mdisc">FAMILY ADOPTION<span class="green">(MONTHLY)</span></h6>
     </Span>
     <Span>
-      <img class="mlogo" src="Images/doc.png"><br>
+      <img class="mlogo" src="Images/doc.png" alt="doctor"><br>
       <h1 class="mfig white">43,749</h1>
       <h6 class="white mdisc">MEDICAL<span class="green">(MONTHLY)</span></h6>
     </Span>
     <Span>
-      <img class="mlogo" src="Images/education .png"><br>
+      <img class="mlogo" src="Images/education .png" alt="education"><br>
       <h1 class="mfig white">180,000</h1>
       <h6 class="white mdisc">EDUCATION <span class="green">(MONTHLY)</span></h6>
     </Span>
@@ -228,37 +228,37 @@
       <p class="greenp p">______<img class="favicon" src="Images/favicon.png" alt="saylani logo">______</p>
       <div class="doing">
         <div class="box">
-          <img class="dlogo" src="Images/sadqah.png">
+          <img class="dlogo" src="Images/sadqah.png" alt="sadqah">
           <h6 class="ddisc bl">
             ONLINE SADQAH
           </h6>
         </div>
         <div class="box">
-          <img class="dlogo" src="Images/welfare.png">
+          <img class="dlogo" src="Images/welfare.png" alt="welfare">
           <h6 class="ddisc bl">
             WELFARE
           </h6>
         </div>
         <div class="box">
-          <img class="dlogo" src="Images/medical.png">
+          <img class="dlogo" src="Images/medical.png" alt="medical">
           <h6 class="ddisc bl">
             MEDICAL
           </h6>
         </div>
         <div class="box">
-          <img class="dlogo" src="Images/Dastarkhwan.png">
+          <img class="dlogo" src="Images/Dastarkhwan.png" alt="Dastarkhwan">
           <h6 class="ddisc bl">
             DASTARKHWAN
           </h6>
         </div>
         <div class="box">
-          <img class="dlogo" src="Images/ROPLANT.png">
+          <img class="dlogo" src="Images/ROPLANT.png" alt="roplant">
           <h6 class="ddisc bl">
             RO PLANT
           </h6>
         </div>
         <div class="box">
-          <img class="dlogo" src="Images/education2.png">
+          <img class="dlogo" src="Images/education2.png" alt="education">
           <h6 class="ddisc bl">
             EDUCATION
           </h6>
@@ -273,20 +273,20 @@
       </h4>
       <div class="mission">
         <div class="mission1 grey">
-          <img src="Images/Hepatitis.png">
+          <img src="Images/Hepatitis.png" alt="hepatitis">
           <h5 class="bl">HEPATITIS</h5>
         </div>
         <div class="mission1 grey">
-          <img src="Images/housing.png">
+          <img src="Images/housing.png" alt="house">
           <h5 class="bl">HOUSING SOCIETY </h5>
         </div>
         <div class="mission1 grey">
-          <img src="Images/IT.png">
+          <img src="Images/IT.png" alt="it">
           <h5 class="bl">IT LITERACY
           </h5>
         </div>
         <div class="mission1 grey">
-          <img src="Images/tharparkar.png">
+          <img src="Images/tharparkar.png" alt="tharparkar">
           <h5 class="bl">THARPARKAR
           </h5>
         </div>
@@ -322,11 +322,11 @@
     <h1><span class="bl">IMAGE </span><span class="green">GALLERY</span></h1>
     <p class="greenp p">______<img class="favicon" src="Images/favicon.png" alt="saylani logo">______</p>
     <div class="gallery container-xl ">
-      <img class="image" src="Images/rashan2.jpg">
-      <img class="image" src="Images/food.jpg">
-      <img class="image" src="Images/hazrat.jpg">
-      <img class="image" src="Images/rashan2.jpg">
-      <img class="image" src="Images/hazrat2.jpg">
+      <img class="image" src="Images/rashan2.jpg" alt="rashan">
+      <img class="image" src="Images/food.jpg" alt="food">
+      <img class="image" src="Images/hazrat.jpg" alt="hazrat">
+      <img class="image" src="Images/rashan2.jpg" alt="rashan">
+      <img class="image" src="Images/hazrat2.jpg" alt="hazrat">
     </div>
   </div>
   <div class="black">
@@ -338,16 +338,16 @@
             Head Office,<br>
             A-25, Bahadurabad Chowrangi Karachi, Pakistan</p>
           <div class="numbers">
-            <p><img class="logo2" src="Images/download.png">UAN: 111-729-526<spn class="space"></span></p>
-            <p><img class="logo2" src="Images/download (9).png">(+0092-213) 4130786-90</p>
+            <p><img class="logo2" src="Images/download.png" alt="logo">UAN: 111-729-526<spn class="space"></span></p>
+            <p><img class="logo2" src="Images/download (9).png" alt="logo">(+0092-213) 4130786-90</p>
             </div>
           <div class="numbers">
-            <p><img class="logo2" src="Images/download.png">CELL: 92-311-1729526<san class="space"></span></p>
-            <p><img class="logo2" src="Images/download.png">USA NO +1(716)941 7792</p>
+            <p><img class="logo2" src="Images/download.png" alt="logo">CELL: 92-311-1729526<san class="space"></span></p>
+            <p><img class="logo2" src="Images/download.png" alt="logo">USA NO +1(716)941 7792</p>
             </div>
           <div class="numbers">
-            <p><img class="logo2" src="Images/download.png">UK NO (+44)115 970 6256<san class="space"></span></p>
-            <p><img class="logo2" src="Images/download (5).png">info@saylaniwelfare.com</p>
+            <p><img class="logo2" src="Images/download.png" alt="logo">UK NO (+44)115 970 6256<san class="space"></span></p>
+            <p><img class="logo2" src="Images/download (5).png" alt="logo">info@saylaniwelfare.com</p>
             </div>
         </div>
       </div>
@@ -358,10 +358,10 @@
       </div>
       <div class="connect">
         <h3 class="white">Connect With Us</h3>
-        <a href="#"><img class="social circle blue" src="Images/download (4).png" alt=""></a>
-        <a href="#"><img class="social circle blue" src="Images/download (2).png" alt=""></a>
-        <a href="#"><img class="social circle blue" src="Images/download (6).png" alt=""></a>
-        <a href="#"><img class="social circle blue" src="Images/download (3).png" alt=""></a>
+        <a href="#"><img class="social circle blue" src="Images/download (4).png" alt="logo"></a>
+        <a href="#"><img class="social circle blue" src="Images/download (2).png" alt="logo"></a>
+        <a href="#"><img class="social circle blue" src="Images/download (6).png" alt="logo"></a>
+        <a href="#"><img class="social circle blue" src="Images/download (3).png" alt="logo"></a>
       </div>
     </div>
   </div>
