--- a/index.html
+++ b/index.html
@@ -155,14 +155,14 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-  <marquee direction="left" class="news blue white"><span class="green">(News-1 Dated:08-03-2019)</span> Saylani Welfare
+  <marquee direction="left" class="news blue white"><span class="greenp">(News-1 Dated:08-03-2019)</span> Saylani Welfare
     Distributing Ration & Clothes to affected people of Balochistan. <a href="#">More Details</a> <span
-      class="green">(News-2 Dated:02-03-2019)</span> Entry Test Accouncement (Graphic Designing & Video
+      class="greenp">(News-2 Dated:02-03-2019)</span> Entry Test Accouncement (Graphic Designing & Video
     Editing/Animation Course) On Sunday 3rd March 2019 @ 11:00Am Vanue: 4rh Floor, Saylani Welfare International Trust
-    HeadOffice Bahadurabad . <a href="#">More Details</a> <span class="green">(News-3 Dated:25-02-2019)</span> PIAIC
-    Entrance Exam Merit Ranking List Announced. <a href="#">More Details</a> <span class="green">(News-4
+    HeadOffice Bahadurabad . <a href="#">More Details</a> <span class="greenp">(News-3 Dated:25-02-2019)</span> PIAIC
+    Entrance Exam Merit Ranking List Announced. <a href="#">More Details</a> <span class="greenp">(News-4
       Dated:23-02-2019)</span> President of Pakistan (Dr. Arif Alvi) Visited Saylani Welfare International Trust
-    HeadOffice Karachi. <a href="#">More Details</a> <span class="green">(News-5 Dated:19-02-2019)</span> Dr Jamil Ahmed
+    HeadOffice Karachi. <a href="#">More Details</a> <span class="greenp">(News-5 Dated:19-02-2019)</span> Dr Jamil Ahmed
     (Additional Inspector General of Police) & Atiqmir Visit Saylani Welfare International Trust, Saylani Mass I.T.
     Training. <a href="#">More Details</a>
   </marquee>
